--- a/weeklong-starter.ipynb
+++ b/weeklong-starter.ipynb
@@ -818,27 +818,68 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 23,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 211
         },
         "id": "GsVQWpuGJaZO",
-        "outputId": "c1d6cc95-9e94-4fba-e47f-588c37717dfe"
+        "outputId": "9c2dabc4-6a72-4a98-a27b-3da2bb050e77"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Features train shape: (640, 22)\n",
-            "Features test shape: (161, 22)\n",
-            "Target train shape: (640, 18)\n",
-            "Target test shape: (161, 18)\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'numerical_features' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-23-2425251630.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m preprocessor = ColumnTransformer(\n\u001b[1;32m     20\u001b[0m     transformers=[\n\u001b[0;32m---> 21\u001b[0;31m         \u001b[0;34m(\u001b[0m\u001b[0;34m'num'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnumerical_transformer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnumerical_features\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m         \u001b[0;34m(\u001b[0m\u001b[0;34m'cat'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcategorical_transformer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcategorical_features\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     ])\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'numerical_features' is not defined"
           ]
         }
       ],
-      "source": []
+      "source": [
+        "from sklearn.compose import ColumnTransformer\n",
+        "from sklearn.pipeline import Pipeline, make_pipeline\n",
+        "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+        "from sklearn.impute import SimpleImputer\n",
+        "\n",
+        "# Identify categorical and numerical columns\n",
+        "categorical_features = features.select_dtypes(include=['object', 'category']).columns\n",
+        "numerical_features = features.select_dtypes(include=np.number).columns\n",
+        "\n",
+        "print(\"Categorical features:\", categorical_features)\n",
+        "print(\"Numerical features:\", numerical_features)\n",
+        "\n",
+        "# Create transformers for numerical and categorical features\n",
+        "numerical_transformer = Pipeline(steps=[\n",
+        "    ('imputer', SimpleImputer(strategy='mean')),\n",
+        "    ('scaler', StandardScaler())\n",
+        "])\n",
+        "\n",
+        "categorical_transformer = Pipeline(steps=[\n",
+        "    ('imputer', SimpleImputer(strategy='most_frequent')),\n",
+        "    ('onehot', OneHotEncoder(handle_unknown='ignore'))\n",
+        "])\n",
+        "\n",
+        "# Create a column transformer to apply different transformations to different columns\n",
+        "preprocessor = ColumnTransformer(\n",
+        "    transformers=[\n",
+        "        ('num', numerical_transformer, numerical_features),\n",
+        "        ('cat', categorical_transformer, categorical_features)\n",
+        "    ])\n",
+        "\n",
+        "# Fit the preprocessor on the training data\n",
+        "features_train_processed = preprocessor.fit_transform(features_train)\n",
+        "\n",
+        "# Transform the test data\n",
+        "features_test_processed = preprocessor.transform(features_test)\n",
+        "\n",
+        "print(\"Processed features train shape:\", features_train_processed.shape)\n",
+        "print(\"Processed features test shape:\", features_test_processed.shape)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -908,22 +949,6 @@
         "- Which model performed the best\n",
         "- Your opinion on the best model's predictions"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "534c50e4"
-      },
-      "source": [
-        "# Identify categorical and numerical columns\n",
-        "categorical_features = features.select_dtypes(include=['object', 'category']).columns\n",
-        "numerical_features = features.select_dtypes(include=np.number).columns\n",
-        "\n",
-        "print(\"Categorical features:\", categorical_features)\n",
-        "print(\"Numerical features:\", numerical_features)"
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ],
   "metadata": {
