--- a/weeklong-starter.ipynb
+++ b/weeklong-starter.ipynb
@@ -28,16 +28,18 @@
         "from sklearn.linear_model import LogisticRegression, Ridge\n",
         "from sklearn.neighbors import KNeighborsClassifier, KNeighborsRegressor\n",
         "from sklearn.ensemble import RandomForestClassifier, RandomForestRegressor\n",
+        "from sklearn.multioutput import MultiOutputRegressor\n",
+        "\n",
         "\n",
         "# evaluation and training imports\n",
         "from sklearn.metrics import accuracy_score, roc_auc_score, f1_score, average_precision_score, mean_squared_error, r2_score, root_mean_squared_error, mean_absolute_percentage_error\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
         "# preprocessing imports\n",
-        "from sklearn.preprocessing import OrdinalEncoder, OneHotEncoder, StandardScaler, MinMaxScaler\n",
-        "from sklearn.impute import SimpleImputer\n",
-        "from sklearn.compose import make_column_transformer\n",
-        "from sklearn.pipeline import make_pipeline"
+        "from sklearn.compose import ColumnTransformer\n",
+        "from sklearn.pipeline import Pipeline, make_pipeline\n",
+        "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+        "from sklearn.impute import SimpleImputer"
       ]
     },
     {
@@ -818,34 +820,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 24,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 211
+          "base_uri": "https://localhost:8080/"
         },
         "id": "GsVQWpuGJaZO",
-        "outputId": "9c2dabc4-6a72-4a98-a27b-3da2bb050e77"
+        "outputId": "060f5425-7eee-414b-baf1-7da6f9ac25e3"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'numerical_features' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-23-2425251630.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m preprocessor = ColumnTransformer(\n\u001b[1;32m     20\u001b[0m     transformers=[\n\u001b[0;32m---> 21\u001b[0;31m         \u001b[0;34m(\u001b[0m\u001b[0;34m'num'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnumerical_transformer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnumerical_features\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m         \u001b[0;34m(\u001b[0m\u001b[0;34m'cat'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcategorical_transformer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcategorical_features\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     ])\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'numerical_features' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Categorical features: Index(['abilities', 'capture_rate', 'classfication', 'japanese_name', 'name',\n",
+            "       'type1', 'type2'],\n",
+            "      dtype='object')\n",
+            "Numerical features: Index(['attack', 'base_egg_steps', 'base_happiness', 'base_total', 'defense',\n",
+            "       'experience_growth', 'height_m', 'hp', 'percentage_male', 'sp_attack',\n",
+            "       'sp_defense', 'speed', 'weight_kg', 'generation', 'is_legendary'],\n",
+            "      dtype='object')\n",
+            "Processed features train shape: (640, 2294)\n",
+            "Processed features test shape: (161, 2294)\n"
           ]
         }
       ],
       "source": [
-        "from sklearn.compose import ColumnTransformer\n",
-        "from sklearn.pipeline import Pipeline, make_pipeline\n",
-        "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
-        "from sklearn.impute import SimpleImputer\n",
-        "\n",
         "# Identify categorical and numerical columns\n",
         "categorical_features = features.select_dtypes(include=['object', 'category']).columns\n",
         "numerical_features = features.select_dtypes(include=np.number).columns\n",
@@ -928,7 +928,27 @@
         "id": "mqke_CvYJaZO"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# Initialize multi-output regression models\n",
+        "# DecisionTreeRegressor and RandomForestRegressor support multi-output natively\n",
+        "dt_regressor = DecisionTreeRegressor(random_state=42)\n",
+        "rf_regressor = RandomForestRegressor(random_state=42)\n",
+        "\n",
+        "# Ridge does not natively support multi-output, so we wrap it\n",
+        "ridge_regressor = MultiOutputRegressor(Ridge())\n",
+        "\n",
+        "models = {\n",
+        "    \"Decision Tree Regressor\": dt_regressor,\n",
+        "    \"Random Forest Regressor\": rf_regressor,\n",
+        "    \"Ridge Regressor\": ridge_regressor\n",
+        "}\n",
+        "\n",
+        "# Train the models\n",
+        "for name, model in models.items():\n",
+        "    print(f\"Training {name}...\")\n",
+        "    model.fit(features_train_processed, target_train)\n",
+        "    print(f\"{name} training complete.\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -949,6 +969,30 @@
         "- Which model performed the best\n",
         "- Your opinion on the best model's predictions"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "46af8dc2"
+      },
+      "source": [
+        "# Evaluate the models using Mean Squared Error (MSE) as an example metric\n",
+        "# You can choose other regression metrics as well\n",
+        "from sklearn.metrics import mean_squared_error\n",
+        "\n",
+        "results = {}\n",
+        "for name, model in models.items():\n",
+        "    predictions = model.predict(features_test_processed)\n",
+        "    mse = mean_squared_error(target_test, predictions)\n",
+        "    results[name] = mse\n",
+        "\n",
+        "# Print the results\n",
+        "print(\"\\nModel Evaluation Results (Mean Squared Error):\")\n",
+        "for name, mse in results.items():\n",
+        "    print(f\"{name}: {mse:.4f}\")"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
