--- a/weeklong-starter.ipynb
+++ b/weeklong-starter.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 25,
       "metadata": {
         "id": "uHE7HhLZ6utW"
       },
@@ -23,7 +23,7 @@
         "import pandas as pd\n",
         "\n",
         "# model imports\n",
-        "from sklearn.svm import SVC\n",
+        "from sklearn.svm import SVC, SVR\n",
         "from sklearn.tree import DecisionTreeClassifier, DecisionTreeRegressor\n",
         "from sklearn.linear_model import LogisticRegression, Ridge\n",
         "from sklearn.neighbors import KNeighborsClassifier, KNeighborsRegressor\n",
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 26,
       "metadata": {
         "id": "-OKVxe4-JaZN"
       },
@@ -67,14 +67,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 634
         },
         "id": "krj8ZRd26nLj",
-        "outputId": "8773ddd5-fee7-4a75-f79a-8a44b39749b1"
+        "outputId": "ad5c6445-7b8d-4eda-c092-d31661e1457d"
       },
       "outputs": [
         {
@@ -150,7 +150,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-610099f8-0916-43e5-a31a-e2723c7a45d8\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-b649dd07-26a3-4382-9f90-bab441b1dfc2\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -464,7 +464,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-610099f8-0916-43e5-a31a-e2723c7a45d8')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b649dd07-26a3-4382-9f90-bab441b1dfc2')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -516,12 +516,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-610099f8-0916-43e5-a31a-e2723c7a45d8 button.colab-df-convert');\n",
+              "        document.querySelector('#df-b649dd07-26a3-4382-9f90-bab441b1dfc2 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-610099f8-0916-43e5-a31a-e2723c7a45d8');\n",
+              "        const element = document.querySelector('#df-b649dd07-26a3-4382-9f90-bab441b1dfc2');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -541,8 +541,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-30c93520-97fe-4b52-88f5-f30342f613b4\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-30c93520-97fe-4b52-88f5-f30342f613b4')\"\n",
+              "    <div id=\"df-d65d583e-d803-4bdc-8145-927c4de35e33\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d65d583e-d803-4bdc-8145-927c4de35e33')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -661,14 +661,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-30c93520-97fe-4b52-88f5-f30342f613b4 button');\n",
+              "            document.querySelector('#df-d65d583e-d803-4bdc-8145-927c4de35e33 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_009d9f3e-0933-4671-8074-a6c0d6500951\">\n",
+              "  <div id=\"id_45daacb7-168c-46db-80c0-5d4231b18771\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -712,7 +712,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_009d9f3e-0933-4671-8074-a6c0d6500951 button.colab-df-generate');\n",
+              "        document.querySelector('#id_45daacb7-168c-46db-80c0-5d4231b18771 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -732,7 +732,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 27
         }
       ],
       "source": [
@@ -742,18 +742,6 @@
         "# penguin_data = pd.read_csv(data_root + \"data/penguins_size.csv\")\n",
         "poke_data\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "metadata": {
-        "id": "AY1CgubNKtp1"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -767,28 +755,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "1qj0aqsqJaZN",
-        "outputId": "8da12a30-004a-478f-ca46-580f258048ad"
+        "id": "1qj0aqsqJaZN"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Features shape: (801, 22)\n",
-            "Target shape: (801, 18)\n",
-            "Features train shape: (640, 22)\n",
-            "Features test shape: (161, 22)\n",
-            "Target train shape: (640, 18)\n",
-            "Target test shape: (161, 18)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Select features\n",
         "feature_columns = [col for col in poke_data.columns if not col.startswith('against_')]\n",
@@ -820,31 +791,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "GsVQWpuGJaZO",
-        "outputId": "060f5425-7eee-414b-baf1-7da6f9ac25e3"
+        "id": "GsVQWpuGJaZO"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Categorical features: Index(['abilities', 'capture_rate', 'classfication', 'japanese_name', 'name',\n",
-            "       'type1', 'type2'],\n",
-            "      dtype='object')\n",
-            "Numerical features: Index(['attack', 'base_egg_steps', 'base_happiness', 'base_total', 'defense',\n",
-            "       'experience_growth', 'height_m', 'hp', 'percentage_male', 'sp_attack',\n",
-            "       'sp_defense', 'speed', 'weight_kg', 'generation', 'is_legendary'],\n",
-            "      dtype='object')\n",
-            "Processed features train shape: (640, 2294)\n",
-            "Processed features test shape: (161, 2294)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Identify categorical and numerical columns\n",
         "categorical_features = features.select_dtypes(include=['object', 'category']).columns\n",
@@ -937,17 +888,39 @@
         "# Ridge does not natively support multi-output, so we wrap it\n",
         "ridge_regressor = MultiOutputRegressor(Ridge())\n",
         "\n",
+        "# KNeighborsRegressor does not natively support multi-output, so we wrap it\n",
+        "knn_regressor = MultiOutputRegressor(KNeighborsRegressor())\n",
+        "\n",
+        "\n",
         "models = {\n",
         "    \"Decision Tree Regressor\": dt_regressor,\n",
         "    \"Random Forest Regressor\": rf_regressor,\n",
-        "    \"Ridge Regressor\": ridge_regressor\n",
+        "    \"Ridge Regressor\": ridge_regressor,\n",
+        "    \"KNeighbors Regressor\": knn_regressor\n",
         "}\n",
         "\n",
-        "# Train the models\n",
-        "for name, model in models.items():\n",
-        "    print(f\"Training {name}...\")\n",
+        "# Set the name of the model you want to train\n",
+        "selected_model_name = \"KNeighbors Regressor\" # You can change this to train a different model\n",
+        "\n",
+        "# Define hyperparameters for the selected model\n",
+        "# This is an example for KNeighborsRegressor\n",
+        "hyperparameters = {\n",
+        "    'estimator__n_neighbors': 7,\n",
+        "    'estimator__weights': 'distance'\n",
+        "}\n",
+        "\n",
+        "\n",
+        "# Train the selected model\n",
+        "if selected_model_name in models:\n",
+        "    model = models[selected_model_name]\n",
+        "    print(f\"Training {selected_model_name}...\")\n",
+        "    model.set_params(**hyperparameters)\n",
         "    model.fit(features_train_processed, target_train)\n",
-        "    print(f\"{name} training complete.\")"
+        "    print(f\"{selected_model_name} training complete.\")\n",
+        "    # Store the trained model in the models dictionary\n",
+        "    models[selected_model_name] = model\n",
+        "else:\n",
+        "    print(f\"Model '{selected_model_name}' not found in the models dictionary.\")"
       ]
     },
     {
