--- a/weeklong-starter.ipynb
+++ b/weeklong-starter.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 36,
       "metadata": {
         "id": "uHE7HhLZ6utW"
       },
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 37,
       "metadata": {
         "id": "-OKVxe4-JaZN"
       },
@@ -67,14 +67,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 38,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 634
         },
         "id": "krj8ZRd26nLj",
-        "outputId": "ad5c6445-7b8d-4eda-c092-d31661e1457d"
+        "outputId": "d83423da-af7e-41c6-9755-35ebf84687f7"
       },
       "outputs": [
         {
@@ -150,7 +150,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b649dd07-26a3-4382-9f90-bab441b1dfc2\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-3a65addf-4e3c-4441-bfcf-39fb29eda125\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -464,7 +464,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b649dd07-26a3-4382-9f90-bab441b1dfc2')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3a65addf-4e3c-4441-bfcf-39fb29eda125')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -516,12 +516,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-b649dd07-26a3-4382-9f90-bab441b1dfc2 button.colab-df-convert');\n",
+              "        document.querySelector('#df-3a65addf-4e3c-4441-bfcf-39fb29eda125 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-b649dd07-26a3-4382-9f90-bab441b1dfc2');\n",
+              "        const element = document.querySelector('#df-3a65addf-4e3c-4441-bfcf-39fb29eda125');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -541,8 +541,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-d65d583e-d803-4bdc-8145-927c4de35e33\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d65d583e-d803-4bdc-8145-927c4de35e33')\"\n",
+              "    <div id=\"df-ed644491-8330-4932-8fac-d6230058d045\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ed644491-8330-4932-8fac-d6230058d045')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -661,14 +661,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-d65d583e-d803-4bdc-8145-927c4de35e33 button');\n",
+              "            document.querySelector('#df-ed644491-8330-4932-8fac-d6230058d045 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_45daacb7-168c-46db-80c0-5d4231b18771\">\n",
+              "  <div id=\"id_a337361e-314d-4174-9807-15cdb1003957\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -712,7 +712,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_45daacb7-168c-46db-80c0-5d4231b18771 button.colab-df-generate');\n",
+              "        document.querySelector('#id_a337361e-314d-4174-9807-15cdb1003957 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -732,7 +732,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 38
         }
       ],
       "source": [
@@ -755,11 +755,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {
-        "id": "1qj0aqsqJaZN"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1qj0aqsqJaZN",
+        "outputId": "d25c0d0a-301f-4aab-e90a-6267749ca5e0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Features shape: (801, 23)\n",
+            "Target shape: (801, 18)\n",
+            "Features train shape: (640, 23)\n",
+            "Features test shape: (161, 23)\n",
+            "Target train shape: (640, 18)\n",
+            "Target test shape: (161, 18)\n"
+          ]
+        }
+      ],
       "source": [
         "# Select features\n",
         "feature_columns = [col for col in poke_data.columns if not col.startswith('against_')]\n",
@@ -791,11 +808,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "metadata": {
-        "id": "GsVQWpuGJaZO"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GsVQWpuGJaZO",
+        "outputId": "3c459377-d712-4cf7-a0f5-a3792b9b7ea6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Categorical features: Index(['abilities', 'capture_rate', 'classfication', 'japanese_name', 'name',\n",
+            "       'type1', 'type2'],\n",
+            "      dtype='object')\n",
+            "Numerical features: Index(['attack', 'base_egg_steps', 'base_happiness', 'base_total', 'defense',\n",
+            "       'experience_growth', 'height_m', 'hp', 'percentage_male',\n",
+            "       'pokedex_number', 'sp_attack', 'sp_defense', 'speed', 'weight_kg',\n",
+            "       'generation', 'is_legendary'],\n",
+            "      dtype='object')\n",
+            "Processed features train shape: (640, 2295)\n",
+            "Processed features test shape: (161, 2295)\n"
+          ]
+        }
+      ],
       "source": [
         "# Identify categorical and numerical columns\n",
         "categorical_features = features.select_dtypes(include=['object', 'category']).columns\n",
@@ -874,11 +912,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "metadata": {
-        "id": "mqke_CvYJaZO"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mqke_CvYJaZO",
+        "outputId": "6ff1e5e9-dbf1-424a-e6e4-2d6ce62e9ece"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training KNeighbors Regressor...\n",
+            "KNeighbors Regressor training complete.\n"
+          ]
+        }
+      ],
       "source": [
         "# Initialize multi-output regression models\n",
         "# DecisionTreeRegressor and RandomForestRegressor support multi-output natively\n",
@@ -917,8 +968,6 @@
         "    model.set_params(**hyperparameters)\n",
         "    model.fit(features_train_processed, target_train)\n",
         "    print(f\"{selected_model_name} training complete.\")\n",
-        "    # Store the trained model in the models dictionary\n",
-        "    models[selected_model_name] = model\n",
         "else:\n",
         "    print(f\"Model '{selected_model_name}' not found in the models dictionary.\")"
       ]
@@ -946,7 +995,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "46af8dc2"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "46af8dc2",
+        "outputId": "561d0a84-d5e9-4b71-92eb-850861b96668"
       },
       "source": [
         "# Evaluate the models using Mean Squared Error (MSE) as an example metric\n",
@@ -954,18 +1007,33 @@
         "from sklearn.metrics import mean_squared_error\n",
         "\n",
         "results = {}\n",
-        "for name, model in models.items():\n",
+        "# Only evaluate the selected model\n",
+        "if selected_model_name in models:\n",
+        "    model = models[selected_model_name]\n",
         "    predictions = model.predict(features_test_processed)\n",
         "    mse = mean_squared_error(target_test, predictions)\n",
-        "    results[name] = mse\n",
+        "    results[selected_model_name] = mse\n",
+        "else:\n",
+        "    print(f\"Model '{selected_model_name}' not found in the models dictionary.\")\n",
+        "\n",
         "\n",
         "# Print the results\n",
         "print(\"\\nModel Evaluation Results (Mean Squared Error):\")\n",
         "for name, mse in results.items():\n",
         "    print(f\"{name}: {mse:.4f}\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Model Evaluation Results (Mean Squared Error):\n",
+            "KNeighbors Regressor: 0.2865\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
