--- a/weeklong-starter.ipynb
+++ b/weeklong-starter.ipynb
@@ -962,14 +962,11 @@
         "\n",
         "\n",
         "# Train the selected model\n",
-        "if selected_model_name in models:\n",
-        "    model = models[selected_model_name]\n",
-        "    print(f\"Training {selected_model_name}...\")\n",
-        "    model.set_params(**hyperparameters)\n",
-        "    model.fit(features_train_processed, target_train)\n",
-        "    print(f\"{selected_model_name} training complete.\")\n",
-        "else:\n",
-        "    print(f\"Model '{selected_model_name}' not found in the models dictionary.\")"
+        "model = models[selected_model_name]\n",
+        "print(f\"Training {selected_model_name}...\")\n",
+        "model.set_params(**hyperparameters)\n",
+        "model.fit(features_train_processed, target_train)\n",
+        "print(f\"{selected_model_name} training complete.\")\n"
       ]
     },
     {
@@ -1003,21 +1000,16 @@
       },
       "source": [
         "# Evaluate the models using Mean Squared Error (MSE) as an example metric\n",
-        "# You can choose other regression metrics as well\n",
+        "\n",
         "from sklearn.metrics import mean_squared_error\n",
         "\n",
         "results = {}\n",
-        "# Only evaluate the selected model\n",
-        "if selected_model_name in models:\n",
-        "    model = models[selected_model_name]\n",
-        "    predictions = model.predict(features_test_processed)\n",
-        "    mse = mean_squared_error(target_test, predictions)\n",
-        "    results[selected_model_name] = mse\n",
-        "else:\n",
-        "    print(f\"Model '{selected_model_name}' not found in the models dictionary.\")\n",
         "\n",
+        "model = models[selected_model_name]\n",
+        "predictions = model.predict(features_test_processed)\n",
+        "mse = mean_squared_error(target_test, predictions)\n",
+        "results[selected_model_name] = mse\n",
         "\n",
-        "# Print the results\n",
         "print(\"\\nModel Evaluation Results (Mean Squared Error):\")\n",
         "for name, mse in results.items():\n",
         "    print(f\"{name}: {mse:.4f}\")"
