--- a/weeklong-starter.ipynb
+++ b/weeklong-starter.ipynb
@@ -936,10 +936,8 @@
         "dt_regressor = DecisionTreeRegressor(random_state=42)\n",
         "rf_regressor = RandomForestRegressor(random_state=42)\n",
         "\n",
-        "# Ridge does not natively support multi-output, so we wrap it\n",
+        "# Ridge and KNeighborsRegressor do not natively support multi-output, so we wrap them\n",
         "ridge_regressor = MultiOutputRegressor(Ridge())\n",
-        "\n",
-        "# KNeighborsRegressor does not natively support multi-output, so we wrap it\n",
         "knn_regressor = MultiOutputRegressor(KNeighborsRegressor())\n",
         "\n",
         "\n",
@@ -950,11 +948,10 @@
         "    \"KNeighbors Regressor\": knn_regressor\n",
         "}\n",
         "\n",
-        "# Set the name of the model you want to train\n",
-        "selected_model_name = \"KNeighbors Regressor\" # You can change this to train a different model\n",
+        "# Select model\n",
+        "selected_model_name = \"KNeighbors Regressor\"\n",
         "\n",
-        "# Define hyperparameters for the selected model\n",
-        "# This is an example for KNeighborsRegressor\n",
+        "# Define hyperparameters\n",
         "hyperparameters = {\n",
         "    'estimator__n_neighbors': 7,\n",
         "    'estimator__weights': 'distance'\n",
