--- a/weeklong-starter.ipynb
+++ b/weeklong-starter.ipynb
@@ -963,7 +963,7 @@
         "print(f\"Training {selected_model_name}...\")\n",
         "model.set_params(**hyperparameters)\n",
         "model.fit(features_train_processed, target_train)\n",
-        "print(f\"{selected_model_name} training complete.\")\n"
+        "print(\"Training complete.\")\n"
       ]
     },
     {
