--- a/weeklong-starter.ipynb
+++ b/weeklong-starter.ipynb
@@ -996,20 +996,20 @@
         "outputId": "921ee8c8-d0d4-467b-8bd3-684cd9703cbd"
       },
       "source": [
-        "# Evaluate the models using Mean Squared Error (MSE) as an example metric\n",
-        "\n",
-        "from sklearn.metrics import mean_squared_error\n",
+        "# Evaluate the models using R-squared as the metric\n",
+        "from sklearn.metrics import r2_score\n",
         "\n",
         "results = {}\n",
-        "\n",
         "model = models[selected_model_name]\n",
         "predictions = model.predict(features_test_processed)\n",
-        "mse = mean_squared_error(target_test, predictions)\n",
-        "results[selected_model_name] = mse\n",
+        "r2 = r2_score(target_test, predictions)\n",
+        "results[selected_model_name] = r2\n",
         "\n",
-        "print(\"\\nModel Evaluation Results (Mean Squared Error):\")\n",
-        "for name, mse in results.items():\n",
-        "    print(f\"{name}: {mse:.4f}\")"
+        "\n",
+        "# Print the results\n",
+        "print(\"\\nModel Evaluation Results (R-squared):\")\n",
+        "for name, r2_score_value in results.items():\n",
+        "    print(f\"{name}: {r2_score_value:.4f}\")"
       ],
       "execution_count": 49,
       "outputs": [
